--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   "author": "esinrogunjo",
   "license": "MIT",
   "dependencies": {
+    "@types/ms": "^0.7.31",
     "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fingerprint": "^1.2.2",
     "helmet": "^5.0.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "ms": "^2.1.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
